Создано с помощью Colaboratory

--- a/DesisionTree.ipynb
+++ b/DesisionTree.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQw9o307TUGsyEYfuJOXX3",
+      "authorship_tag": "ABX9TyOJmbbQL282wB+ddsIW0c6z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -649,9 +649,79 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(data.drop('target', axis=1),\n",
+        "                                                    data['target'], test_size=0.25, random_state=13)\n",
+        "X_train.shape, X_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tW2Ze2QSU1DZ",
+        "outputId": "8c7f0f89-48d5-4f30-f6f7-c1aed1dd1263"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((227, 13), (76, 13))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's train a decision tree from `sklearn` (`sklearn.tree.Decision Tree Classifier`)\n",
+        "with no limit on the maximum depth (`max_depth=None`). As a seed, we will put `random_state=13`.\n",
+        "Next, we will find the proportion of correct answers of the obtained algorithm in the training sample\n",
+        "(** as a percentage **)"
+      ],
+      "metadata": {
+        "id": "ECtvljvwVGNt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "dt = DecisionTreeClassifier(max_depth=None, random_state=13)\n",
+        "dt.fit(X_train, y_train)\n",
+        "y_pred_train = dt.predict(X_train)\n",
+        "accuracy_score(y_train, y_pred_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wzZMyGfIVB4u",
+        "outputId": "9c3d87ce-277e-44f4-e9db-40b2cb84401a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tW2Ze2QSU1DZ"
+        "id": "zpySTUcRVKkS"
       },
       "execution_count": null,
       "outputs": []
