--- a/DesisionTree.ipynb
+++ b/DesisionTree.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOB+7WekdecF4U7ijtUKidv",
+      "authorship_tag": "ABX9TyOKeI7N9Q0gP/2cas8M80Hb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -786,10 +786,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Using cross-validation, we will select the optimal hyperparameters of the algorithm.\n",
+        "Choose from the following sets:\n",
+        "- `max_depth`: [3, 4, 5, 6, 7, 8, 9, 10, None]\n",
+        "- `max_features`: ['auto', 'log2', None]\n",
+        "- `min_samples_leaf`: range(1, 10)\n",
+        "- `min_samples_split`: range(2, 10)\n",
+        "- `criterion`: ['gini', 'entropy']"
+      ],
+      "metadata": {
+        "id": "WrtygtwCVw17"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+        "grid_searcher = GridSearchCV(DecisionTreeClassifier(random_state=13),\n",
+        "                            param_grid = {'max_depth' : [3, 4, 5, 6, 7, 8, 9, 10, None],\n",
+        "                                          'max_features' : ['auto', 'log2', None],\n",
+        "                                          'min_samples_leaf' : range(1, 10),\n",
+        "                                          'min_samples_split' : range(2, 10),\n",
+        "                                          'criterion' : ['gini', 'entropy']},\n",
+        "                            scoring='accuracy', cv=5, n_jobs=-1)\n",
+        "\n",
+        "grid_searcher.fit(X_train, y_train)\n",
+        "grid_searcher.best_params_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XmyD4aGoVkEA",
+        "outputId": "55958f80-df91-4c21-cc9d-c4c00fff06d1"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/tree/_classes.py:269: FutureWarning: `max_features='auto'` has been deprecated in 1.1 and will be removed in 1.3. To keep the past behaviour, explicitly set `max_features='sqrt'`.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'criterion': 'gini',\n",
+              " 'max_depth': 9,\n",
+              " 'max_features': 'auto',\n",
+              " 'min_samples_leaf': 3,\n",
+              " 'min_samples_split': 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "XmyD4aGoVkEA"
+        "id": "0xXGyA8pV2qA"
       },
       "execution_count": null,
       "outputs": []
